--- a/webapp/templates/main.html
+++ b/webapp/templates/main.html
@@ -33,7 +33,7 @@
                     </button>
                 </div>
                 <div class="action">
-                    <button>
+                    <button class="coupon">
                         <img src="{{ url_for('static', filename='images/coupon.svg') }}"/>
                         <p>Купон</p>
                     </button>
