get pay bill to front

--- a/webapp/templates/main.html
+++ b/webapp/templates/main.html
@@ -18,7 +18,7 @@
         <div class="balance">
             <div class="amount">
                 <p id="user_amount">00,00<span> ₽</span></p>
-                <button>
+                <button class="pay_btn">
                     <img src="{{ url_for('static', filename='images/add_btn.svg') }}"/>
                 </button>
             </div>
