--- a/webapp/templates/main.html
+++ b/webapp/templates/main.html
@@ -27,7 +27,7 @@
             </div>
             <div class="action-list">
                 <div class="action">
-                    <button id="bill-history">
+                    <button class="bill-history">
                         <img src="{{ url_for('static', filename='images/history.svg') }}"/>
                         <p>История</p>
                     </button>
