add help bot button

--- a/webapp/templates/main.html
+++ b/webapp/templates/main.html
@@ -38,6 +38,12 @@
                         <p>Купон</p>
                     </button>
                 </div>
+                <div class="action">
+                    <button class="help">
+                        <img src="{{ url_for('static', filename='images/help.svg') }}"/>
+                        <p>Помощь</p>
+                    </button>
+                </div>
             </div>
         </div>
         <div class="current-peers">
