--- a/webapp/templates/main.html
+++ b/webapp/templates/main.html
@@ -39,7 +39,7 @@
                     </button>
                 </div>
                 <div class="action">
-                    <button class="help">
+                    <button class="help_btn">
                         <img src="{{ url_for('static', filename='images/help.svg') }}"/>
                         <p>Помощь</p>
                     </button>
