fix exeption and add domain info to front

--- a/webapp/templates/start.html
+++ b/webapp/templates/start.html
@@ -28,26 +28,23 @@
             <h1>Список доступных стран</h1>
             <ul>
                 <li>
-                    <img src="{{ url_for('static', filename='images/russia.png') }}"/>
+                    <img src="{{ url_for('static', filename='images/1.png') }}"/>
                     <p>Россия</p>
                 </li>
                 <li>
-                    <img src="{{ url_for('static', filename='images/poland.png') }}"/>
+                    <img src="{{ url_for('static', filename='images/2.png') }}"/>
                     <p>Польша</p>
                 </li>
             </ul>
         </div>
         <div class="cost">
-            <h1>Цены</h1>
+            <h1>Цена</h1>
             <ul>
                 <li class="price">
                     <p class="price-text">5 ₽/день или 150 ₽/мес за одно подключение</p>
                 </li>
             </ul>
         </div>
-        <!-- <div class="join">
-            <button id="join_btn">Join</button>
-        </div> -->
     </div>
 </body>
 </html>
