--- a/webapp/templates/main.html
+++ b/webapp/templates/main.html
@@ -17,7 +17,7 @@
         <h4>Баланс</h4>
         <div class="balance">
             <div class="amount">
-                <p id="user_amount">00,00<span> ₽</span></p>
+                <p id="user_amount">00,00<span> W</span></p>
                 <button class="pay_btn">
                     <img src="{{ url_for('static', filename='images/add_btn.svg') }}"/>
                 </button>
