--- a/webapp/templates/pay.html
+++ b/webapp/templates/pay.html
@@ -20,7 +20,7 @@
             <h3>Аккаунт</h3>
             <div class="account">
                 <p class="user_id">ID пользователя <span>...78</span></p>
-                <p class="user_amount">00,00<span> ₽</span></p>
+                <p class="user_amount">00,00<span> W</span></p>
             </div>
         </div>
         <div class="form">
