fixes in day left and front

--- a/webapp/templates/pay.html
+++ b/webapp/templates/pay.html
@@ -26,8 +26,8 @@
         <div class="form">
             <h3>Сумма</h3>
             <input onkeypress="if ( isNaN( String.fromCharCode(event.keyCode) )) return false;" type="text" class="input__field" placeholder="Введите сумму" name="amount_for_pay" id='amount' required />
-            <p>Минимум: 20 ₽</p>
-            <p>Максимум: 500 ₽ (из-за того, что функционал пока тестируется)</p>
+            <p>Минимум: 1 ₽, максимум: 500 ₽</p>
+            <p>Оплата происходит в криптовалюте <span>USDT, BTC, TON</span>. Конвертация из рублей в криптовалюту происходит автоматически</p>
         </div>
     </div>
 </body>
