--- a/webapp/templates/start.html
+++ b/webapp/templates/start.html
@@ -44,10 +44,10 @@
                     <p class="price-text">5 <span>W</span> / день или 150 <span>W</span> / мес за одно подключение</p>
                 </li>
                 <li class="price">
-                    <p class="price-text">1 W = 1 ₽</p>
+                    <p class="price-text">1 <span>W</span> = 1 ₽</p>
                 </li>
                 <li class="price">
-                    <p class="price-text">W это внутренняя валюта, которую вы можете приобрести за <span>USTD</span>, <span>TON</span> или <span>BTC</span></p>
+                    <p class="price-text"><span>W</span> это внутренняя валюта, которую вы можете приобрести за <span>USTD</span>, <span>TON</span> или <span>BTC</span></p>
                 </li>
             </ul>
         </div>
