--- a/webapp/templates/coupon.html
+++ b/webapp/templates/coupon.html
@@ -16,7 +16,7 @@
 <body>
     <div class="container">
         <h4>Введите код</h4>
-        <input id='coupon' maxlength='7' value='1234567'/>
+        <input id='coupon' maxlength='7' placeholder='code'/>
 
     </div>
 </body>
