--- a/webapp/static/css/coupon.css
+++ b/webapp/static/css/coupon.css
@@ -14,7 +14,7 @@ input {
   background: repeating-linear-gradient(90deg, dimgrey 0, dimgrey 1ch, transparent 0, transparent 1.5ch) 0 100%/ 10ch 2px no-repeat;
   font: 5ch droid sans mono, consolas, monospace;
   letter-spacing: 0.5ch;
-  color: var(--tg-theme-text-color);
+  color: #f5f5f5;
 }
 
 input:focus {
