--- a/webapp/static/css/start.css
+++ b/webapp/static/css/start.css
@@ -19,8 +19,8 @@ body {
 	margin: 0;
 	padding: 10px;
 	font-size: 18px;
-	color: #f5f5f5;
-	background: #282e33;
+	color: var(--tg-theme-text-color);
+	background: var(--tg-theme-bg-color);
 }
 
 .container {
@@ -31,12 +31,16 @@ body {
 h1{
 	font-size: 1.5em;
 	font-family: 'RobotoMono-Bold';
-	font-weight: 700;
+	font-weight: 400;
 	text-align: center;
 }
 
 .logo{
 	text-align: center;
+}
+
+.logo svg path{
+	fill: var(--tg-theme-text-color);
 }
 
 .description p{
@@ -57,7 +61,7 @@ ul{
 }
 
 li{
-	background-color: #212332;
+	background-color: var(--tg-theme-secondary-bg-color);
 	border-radius: 10px;
 	display: flex;
 	flex-direction: row;
@@ -96,26 +100,4 @@ li p{
 	font-size: 1em;
 	font-family: 'RobotoMono-Regular';
 	font-weight: 400;
-}
-
-.join{
-	position: fixed;
-	bottom: 0px;
-	right: 0px;
-	width: 100%;
-	height: 50px;
-}
-
-.join button{
-	border: none;
-	width: 90%;
-	height: inherit;
-	background-color: #27C181;
-	margin: 0 20px;
-	border-radius: 10px;
-
-	font-size: 1.8em;
-	font-family: 'RobotoMono-Bold';
-	font-weight: 700;
-	color: white;
 }
