add tarif and fix description

--- a/webapp/templates/main.html
+++ b/webapp/templates/main.html
@@ -23,7 +23,8 @@
                 </button>
             </div>
             <div class="balance-days">
-                Хватит на <span id="user_left_days">00</span> дней
+                Хватит на <span id="user_left_days">00</span> <span id="day_str">дней</span>
+                <p>Тариф 4 W/сутки за 1 подключение</p>
             </div>
             <div class="action-list">
                 <div class="action">
