--- a/webapp/templates/pay.html
+++ b/webapp/templates/pay.html
@@ -37,7 +37,7 @@
             </div>
             <input onkeypress="if ( isNaN( String.fromCharCode(event.keyCode) )) return false;" type="text" class="input__field" placeholder="Введите сумму" name="amount_for_pay" id='amount' required />
             <p>Минимум: 1 ₽, максимум: 500 ₽</p>
-            <p>Оплата происходит в криптовалюте <span>USDT, BTC, TON</span>. Конвертация из рублей в криптовалюту происходит автоматически</p>
+            <p>При выборе Wallet оплата происходит в криптовалюте <span>USDT, BTC или TON</span></p>
         </div>
     </div>
 </body>
