--- a/webapp/templates/start.html
+++ b/webapp/templates/start.html
@@ -49,7 +49,7 @@
                     <p class="price-text">1 <span>W</span> = 1 ₽</p>
                 </li>
                 <li class="price">
-                    <p class="price-text"><span>W</span> это внутренняя валюта, которую вы можете приобрести за <span>USTD</span>, <span>TON</span> или <span>BTC</span></p>
+                    <p class="price-text"><span>W</span> это внутренняя валюта, которую вы можете приобрести за <span>RUB</span>, <span>USTD</span>, <span>TON</span> или <span>BTC</span></p>
                 </li>
             </ul>
         </div>
