shdule fix, grammatic on frontend fix

--- a/webapp/templates/start.html
+++ b/webapp/templates/start.html
@@ -23,7 +23,7 @@
         <div class="description">
             <p>
                 Всем привет! Вы попали в первое VPN приложение в формате web app  <br>🚀🚀🚀<br><br>
-Тут вы сможете с легкостью настроить ваш VPN, который будет быстро работать на Android, IOS, Windows и даже на Linux. Особонность нашего сервиса в том, что вам не нужно переплачивать за соединения, которые вам не нужны - выбирайте сами, за что вам платить, а за что нет 😉
+Тут вы сможете с легкостью настроить ваш VPN, который будет быстро работать на Android, IOS, Windows и даже на Linux. Особенность нашего сервиса в том, что вам не нужно переплачивать за соединения, которые вам не нужны - выбирайте сами, за что вам платить, а за что нет 😉
             </p>
         </div>
         <div class="avaliable-country-list">
